samples/_failures_safe/1761495020_4f2f7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b6e003c.c: In function ‘main’:
./samples/SAFE/__tmp_3b6e003c.c:150:13: error: expected expression at end of input
  150 |             mat2.rows =
      |             ^~~~
./samples/SAFE/__tmp_3b6e003c.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b6e003c.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b6e003c.c:150:13: error: expected declaration or statement at end of input
